omg fix the overlapping

--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,6 @@ h1 {
     font-color: white;
     font-size: 60px;
     font-stretch: extra-expanded;
-    font-color: black;
     animation: logoAppears 2s;
     background-color: black;
     text-align: center;
@@ -23,8 +22,7 @@ h1.border {
     padding-bottom: 100px;
     padding-left: 10px;
     padding-right: 10px;
-    border-bottom: 10px dotted #82ECFF;
-    bottom: 50%; /* should make the border stretch 50% of the way */
+    border: 10px dotted #FFFFFF;
 }
 footer {
     padding: 10px;
@@ -45,7 +43,6 @@ p {
     padding-left, padding-right: 10px;
     padding-top: 10px;
     padding-bottom: 30px;
-    position: absolute;
     }
 body {
     margin: 60px;
